--- a/src/index.jade
+++ b/src/index.jade
@@ -1,7 +1,7 @@
 html(ng-app = 'SevenUp')
     head
-        script(src='../bower_components/angular/angular.js')
-        script(src='../bower_components/angular-route/angular-route.js')
-        script(src='app.js')
+        link(rel='stylesheet', href='style.css')
+        script(src='library.js')
+        script(src='application.js')
     body
-        div(ng-view)
+        div.container(ng-view)
