--- a/src/index.jade
+++ b/src/index.jade
@@ -3,8 +3,8 @@ html(ng-app = 'SevenUp')
         script(src='../bower_components/angular/angular.js')
         script(src='../bower_components/angular-route/angular-route.js')
 
-        script(src='sevenup.js')
-        link(rel='stylesheet', href='sevenup.css')
+        script(src='SevenUp.js')
+        link(rel='stylesheet', href='SevenUp.css')
 
     body
         .container
