--- a/src/index.jade
+++ b/src/index.jade
@@ -1,4 +1,4 @@
-html(ng-app = 'SevenUp')
+html(ng-app = 'App')
     head
         script(src='../bower_components/angular/angular.js')
         script(src='../bower_components/angular-route/angular-route.js')
