--- a/src/app/components/home/home.jade
+++ b/src/app/components/home/home.jade
@@ -1,16 +1,16 @@
 div.col-md-5
     div.row
         div.col-md-12
-            textarea(rows="15", ng-model="ProgramCode", ng-change="Perform()")
+            textarea(rows="15", ng-model="HomeViewModel.ProgramCode", ng-change="HomeViewModel.ExecuteProgramCode()")
     div.row
         div.col-md-12
-            div(ng-switch="UnknownTokens.length > 0")
+            div(ng-switch="HomeViewModel.UnknownTokens.length > 0")
                 div#result-container-success(ng-switch-when="false")
                     h4 There are no errors!
                 div#result-container-danger(ng-switch-when="true")
                     h4 Your code has the following failures:
                     br
-                    div(ng-repeat="token in UnknownTokens track by $index")
+                    div(ng-repeat="token in HomeViewModel.UnknownTokens track by $index")
                         p {{ token.Value }} at [{{ token.YPosition }}:{{ token.XPosition }}]
                 div#result-container-success(ng-switch-default)
                     h4 There are no errors!
@@ -23,7 +23,7 @@ div.col-md-7
                     th.col-xs-4 Type
                     th.col-xs-2 Position
             tbody
-                tr(ng-repeat="token in RecognizedTokens track by $index")
+                tr(ng-repeat="token in HomeViewModel.RecognizedTokens track by $index")
                     td.col-xs-6 {{ token.Value }}
                     td.col-xs-4 {{ token.Type }}
                     td.col-xs-2 [{{ token.YPosition }}:{{ token.XPosition }}]
